# faultCode

./: CMakeLists.txt  README.md  TEST_FILE  TEST_IMG  TEST_PERFORMANCE  input.txt  out.txt  test.txt
include/: codeRecognizor.h
model/: bgr.txt  cascade.xml  fault_code.caffemodel  fault_code.prototxt
src/: codeRecognizor.cpp
test/: performanceCheck.cpp  test_file.cpp  test_img.cpp
